# sie_files

./: CMakeLists.txt
src/: file.c  file.h  files.c  files.h  helpers.c  helpers.h  ipc.c  ipc.h  main.c  menu.c  menu.h  menu_create.c  menu_new_file.c  menu_new_file.h  menu_options.c  menu_options.h  menu_set_as.c  menu_set_as.h  menu_settings.c  msg.c  msg.h  path_stack.c  path_stack.h  procs.c  procs.h
src/menu/: create.c  create.h  new_file.c  new_file.h  operations.c  operations.h  options.c  set_as.c  settings.c  settings.h  view.c  view.h
src/procs/: copy_move.c  copy_move.h  create_new_file.c  create_new_file.h  delete.c  delete.h  paste.c  paste.h  procs.c  procs.h  select.c  select.h  set_as.c  set_as.h  settings.c  settings.h  sort.c  sort.h
